--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "web-vitals": "^2.1.4",
     "mobx": "^6.10.0"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  },
   "scripts": {
     "start": "set PORT=3002 && react-scripts start",
     "build": "react-scripts build",
