--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "mobx": "^6.10.0"
+    "mobx": "^6.10.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/uuid": "^9.0.2"
   },
   "scripts": {
     "start": "set PORT=3002 && react-scripts start",
